feat: - add auth features
